# ai_knowledge_base_app

backend/: .env  .env.example  .gitignore  Untitled  pyproject.toml
backend/app/core/: config.py
backend/app/database/: session.py
